# wttj-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml
scripts/: refresh_token.py  start_mcp.sh
src/wttj_mcp/: server.py
