[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wttj-mcp"
version = "0.1.0"
description = "MCP server for Welcome to the Jungle"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
wttj-mcp = "wttj_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wttj_mcp"]
